--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sindresorhus/is": "^4.6.0",
+    "app-root-path": "^3.0.0",
     "aws-sdk": "^2.1143.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -18,6 +19,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0"
   },
