이메일 인증 기능 추가

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ PORT=3000
 MONGODB_URL="mongodb+srv://elice21:elice21@simple-cluster.qr6au.mongodb.net"
 
 JWT_SECRET_KEY="ad5kafl91AGak@192vk0LQPVIckvD#a@o!d3/dao1qw%ez"
+
+NODEMAILER_USER= "rhakdjfk@ajou.ac.kr"
+NODEMAILER_PASS= "tls960505~"
+NODEMAILER_PASS_GOOGLEAPP = "cmejrfgymqutlxro"
