--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-s3": "^2.10.0"
+    "multer-s3": "^2.10.0",
+    "nodemailer": "^6.7.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
