kakao 기능 구현 완료, db연동 미완성

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ JWT_SECRET_KEY="ad5kafl91AGak@192vk0LQPVIckvD#a@o!d3/dao1qw%ez"
 
 NODEMAILER_USER= "rhakdjfk@ajou.ac.kr"
 NODEMAILER_PASS= "tls960505~"
+
+KAKAO_APPKEY = "5a9bd9cb5a4e9c3ed9c82c92c2823bc9"
+KAKAO_CALLBACKURL = "/api/auth/kakao/callback"
