--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
-    "nodemailer": "^6.7.5"
+    "nodemailer": "^6.7.5",
+    "passport": "^0.6.0",
+    "passport-kakao": "^1.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
