--- a/package.json
+++ b/package.json
@@ -17,16 +17,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
-    "nodemailer": "^6.7.5",
-    "passport": "^0.6.0",
-    "passport-kakao": "^1.0.1"
+    "nodemailer": "^6.7.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
